# rust-jwt-auth

./: .env  Cargo.toml  LICENSE  README.md
migrations/2022-05-04-133609_add_users/: up.sql
src/: db.rs  main.rs  schema.rs
src/handlers/: buyer.rs  mod.rs  routes.rs  seller.rs  user.rs
src/models/: auth.rs  user.rs
